--- a/KernelProgram/KernelProgram.vcxproj
+++ b/KernelProgram/KernelProgram.vcxproj
@@ -133,7 +133,7 @@
     <DebuggerFlavor>DbgengKernelDebugger</DebuggerFlavor>
   </PropertyGroup>
   <ItemGroup>
-    <Inf Include="KernalProgram.inf" />
+    <Inf Include="KernelProgram.inf" />
   </ItemGroup>
   <ItemGroup>
     <FilesToPackage Include="$(TargetPath)" />
