--- a/KernelProgram/KernelProgram.vcxproj.filters
+++ b/KernelProgram/KernelProgram.vcxproj.filters
@@ -19,7 +19,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Inf Include="KernalProgram.inf">
+    <Inf Include="KernelProgram.inf">
       <Filter>Driver Files</Filter>
     </Inf>
   </ItemGroup>
